deployment-manifests/x64/ht_user_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ur-microservice
  labels:
    app: ur-microservice
spec:
  selector:
    matchLabels:
      app: ur-microservice
  replicas: 5
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: ur-microservice
        category: optional
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: category
                    operator: In
                    values:
                      - optional
      containers:
        - image: dhaura/agri-app-ua:latest-x64
          imagePullPolicy: Always
          name: ur-microservice
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: readings-pv
              mountPath: /app/readings
      volumes:
        - name: readings-pv
          persistentVolumeClaim:
            claimName: readings-pvc
