deployment-manifests/x64/humidity_deployment.yaml
apiVersion: apps/v1
kind: Deployment                                          
metadata:
  name: hr-microservice
spec:
  selector:                                              
    matchLabels:
      app: hr-microservice
  replicas: 1                                         
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 0                                   
      maxSurge: 1                                        
  template:                                               
    metadata:
      labels:
        app: hr-microservice                                  
    spec:
      containers:
        - image: dhaura/agri-app-hr:latest-x64
          imagePullPolicy: Always                        
          name: hr-microservice
          ports:
            - containerPort: 8004
          volumeMounts:
            - name: readings-pv
              mountPath: /app/readings
      volumes:
        - name: readings-pv
          persistentVolumeClaim:
            claimName: readings-pvc
