deployment-manifests/x64/master_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agri-app-master
  name: agri-app-master
spec:
  replicas: 10
  selector:
    matchLabels:
      app: agri-app-master
  strategy: {}
  template:
    metadata:
      labels:
        app: agri-app-master
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: category
                    operator: In
                    values:
                      - mandatory
      containers:
      - args:
        - agri_app_master
        image: dhaura/agri-app-master-new:latest-x64
        name: master
        ports:
        - containerPort: 80
        resources: {}
status: {}
