deployment-manifests/x64/rs_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agri-app-rs
  name: agri-app-rs
spec:
  replicas: 15
  selector:
    matchLabels:
      app: agri-app-rs
  strategy: {}
  template:
    metadata:
      labels:
        app: agri-app-rs
        category: optional
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: category
                    operator: In
                    values:
                      - optional
      containers:
      - args:
        - agri_app_rs
        image: dhaura/agri-app-rs:latest-x64
        name: rs
        ports:
        - containerPort: 8001
        resources: {}
status: {}
