deployment-manifests/x64/temperature_deployment.yaml
apiVersion: apps/v1
kind: Deployment                                          
metadata:
  name: tr-microservice
spec:
  selector:                                              
    matchLabels:
      app: tr-microservice
  replicas: 5
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 0                                   
      maxSurge: 1                                        
  template:                                               
    metadata:
      labels:
        app: tr-microservice
        category: optional
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: category
                    operator: In
                    values:
                      - optional
      containers:
        - image: dhaura/agri-app-tr:latest-x64
          imagePullPolicy: Always                        
          name: tr-microservice
          ports:
            - containerPort: 8003
          volumeMounts:
            - name: readings-pv
              mountPath: /app/readings
      volumes:
        - name: readings-pv
          persistentVolumeClaim:
            claimName: readings-pvc
