deployment-manifests/x64/master_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-agri-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
      - path: /predict_disease
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
      - path: /read_temperature/(\d+)$
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
      - path: /read_humidity/(\d+)$
        pathType: Prefix
        backend:
          service:
            name: svc-agri-app-master
            port:
              number: 80
